issue #10: header - user navigation mobile view fix

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -66,7 +66,7 @@
       margin-left: 0;
       & + #{$blockClass}__navigation-item {
         margin-left: 1.25rem;
-        @media (max-width: $screen-xs-max) {
+        @media (max-width: $screen-md-max) {
           margin-left: 0;
         }
       }
@@ -76,18 +76,21 @@
       #{$blockClass}__navigation-item {
         margin-left: 2rem;
         line-height: 2rem;
-        @media (max-width: $screen-xs-max) {
+        @media (max-width: $screen-md-max) {
           margin-left: 0;
         }
       }
       #{$blockClass}__navigation-link {
-        @media (max-width: $screen-xs-max) {
+        @media (max-width: $screen-md-max) {
           font-weight: bold;
         }
       }
-      @media (max-width: $screen-xs-max) {
+      @media (max-width: $screen-md-max) {
         border-left: none;
       }
+    }
+    @media (max-width: $screen-md-max) {
+      border-top: 0.0625rem solid $color-dark-10;
     }
   }
   &__navigation-link {
